--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-threads", "1", "-sizeMB", "16", "-benchmark", "-verify","192.168.20.20:/data/junk1", "-verbose"]
+            "args": [ "-verbose", "-threads", "5", "-sizeMB", "16", "-benchmark", "-verify","127.0.0.1:/Volumes/RAMDisk/junk2"]
         },
         {
             "name": "Stream Test - StreamIN",
@@ -50,7 +50,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-threads", "3", "-force-input-stream", "-verbose", "-verify", "../junk1", "../junk2"]
+            "args": [ "-threads", "5", "-force-input-stream", "-verbose", "-verify", "../junk1", "../junk2"]
         }
         ,
         {
@@ -59,7 +59,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-threads", "3", "-force-output-stream", "-verbose", "-verify", "../junk1", "../junk2"]
+            "args": [ "-threads", "5", "-force-output-stream", "-verbose", "-verify", "../junk1", "../junk2"]
         },
         {
             "name": "Stream Test stream plaid ",
@@ -67,7 +67,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-threads", "3", "-stream", "-verbose","-verify", "../junk1", "../junk8"]
+            "args": [ "-threads", "5", "-stream", "-verbose","-verify", "../junk1", "../junk8"]
         },
         {
             "name": "Stream Test Local Pliad ",
@@ -75,7 +75,24 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-threads", "3", "-stream", "-verbose", "../junk1", "../junk9"]
+            "args": [ "-threads", "5", "-stream", "-verbose", "../junk1", "../junk9"]
+        },
+        {
+            "name": "Hash spread Test Local  ",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}",
+            "args": ["-hash", "-threads", "5", "-verbose", "../junk2",]
+        },
+        {
+            "name": "Hash spread Test remote  ",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}",
+            "args": ["-hash", "-threads", "5", "-verbose", "127.0.0.1:/Volumes/RAMDisk/junk2"]
         }
+        
     ]
 }
