--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -86,6 +86,22 @@
             "args": ["-hash", "-threads", "5", "-verbose", "../junk2",]
         },
         {
+            "name": "Hash spread Test Local  64 G",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}",
+            "args": ["-hash", "-threads", "1", "-verbose", "tempdir/67108864",]
+        },
+        {
+            "name": "Hash spread Test Local (actually nfscopy) 64 G",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}",
+            "args": ["-verify", "-threads", "1", "tempdir/67108864","/dev/null"]
+        },
+        {
             "name": "Hash spread Test remote  ",
             "type": "go",
             "request": "launch",
