--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Benchmark - local file",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${fileDirname}",
+            "args": ["-benchmark", "-threads", "1", "-sizeMB", "4096", "../junk1"]
+        },
+        {
+            "name": "Benchmark - local nfs file",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${fileDirname}",
+            "args": ["-benchmark", "-threads", "1", "-sizeMB", "6", "127.0.0.1:/Volumes/RAMDisk/junk1"]
+        },
+        {
+            "name": "Benchmark - remote nfs file",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${fileDirname}",
+            "args": ["-benchmark", "-threads", "1","-verify", "-csv", "-sizeMB", "256", "192.168.20.20:/data/junk1"]
+        },
+        {
             "name": "Mount Show",
             "type": "go",
             "request": "launch",
@@ -50,7 +74,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
-            "args": [ "-verbose", "-threads", "1", "-sizeMB", "100", "-benchmark","192.168.20.20:/data/junk2"]
+            "args": [ "-verbose", "-threads", "1", "-sizeMB", "100", "-benchmark", "-verify","192.168.20.20:/data/junk2"]
         },
         {
             "name": "Stream Test - StreamIN",
